# native_sqlcipher

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml  test.db
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt
android/src/main/java/com/riguz/native_sqlcipher/: NativeSqlcipherPlugin.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle  build.gradle.kts
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/riguz/native_sqlcipher_example/: MainActivity.java
example/android/app/src/main/kotlin/com/example/native_sqlcipher_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: native_sqlcipher.podspec
ios/Classes/: NativeSqlcipherPlugin.h  NativeSqlcipherPlugin.m  SwiftNativeSqlcipherPlugin.swift
lib/: connection_tracker.dart  database.dart  native_sqlcipher.dart  native_sqlcipher_bindings_generated.dart
lib/bindings/: bindings.dart  signatures.dart
lib/src/: database.dart
lib/src/bindings/: bindings.dart  signatures.dart
linux/: CMakeLists.txt
macos/: native_sqlcipher.podspec
macos/Classes/: fts5_hans.cpp  native_sqlcipher.c  simple.cc  sqlite3.c
src/: CMakeLists.txt  entry.cc  native_sqlcipher.c  pinyin.cc  simple_init.cc
test/: native_sqlcipher_test.dart  sqlcipher_test.dart
windows/: CMakeLists.txt
